tests/baselines/reference/parser509618.errors.txt
parser509618.ts(2,20): error TS1036: Statements are not allowed in ambient contexts.


==== parser509618.ts (1 errors) ====
    declare module ambiModule {
       interface i1 { };
                       ~
!!! error TS1036: Statements are not allowed in ambient contexts.
    }
    